--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="row">
                 <div class="col-lg-2 col-md-2">
                     <div class="header__logo">
-                        <a href="./index.html"><img src="img/logo.png" alt="nfl superbowl logo"></a>
+                        <a href="./index.html">SBHS</a>
                     </div>
                 </div>
                 <div class="col-lg-10 col-md-10">
@@ -593,7 +593,7 @@
                 </div>
             </div>
 			<div class="footer__copyright__text">
-				<p>Copyright &copy; <script>document.write(new Date().getFullYear());</script> All rights reserved | SBHS | <a href="https://colorlib.com" target="_blank">Colorlib</a></p>
+				<p>Copyright &copy; <script>document.write(new Date().getFullYear());</script> All rights reserved | SBHS </p>
 			</div>
         </div>
     </footer>
